Revert body width to max-content Prioritizing consistent column-width rather than trying to eliminate surplus whitespace scrolling off to the right of the content. Not an issue on all pages.

--- a/columnate.css
+++ b/columnate.css
@@ -8,7 +8,7 @@ html {
 
 body {
 	height: 100%;
-	width: fit-content;
+	width: max-content;
 
 	margin: 0;
 	padding: 0;
